# pv116.rozetka.com/routes/api.php
@@ -4,6 +4,7 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
 use App\Http\Controllers\Api\CategoryController;
+use App\Http\Controllers\Api\ProductController;
 use App\Http\Controllers\AuthController;
 
 /*
@@ -25,6 +26,8 @@ Route::get('/categories',[CategoryController::class, 'getList']);
 Route::post('/categories',[CategoryController::class, 'create']);
 Route::delete("/categories/{id}", [CategoryController::class, "delete"]);
 Route::post("/categories/edit/{id}", [CategoryController::class, "edit"]);
+
+Route::get('/products',[ProductController::class, 'getList']);
 
 Route::post('/login',[AuthController::class, 'login']);
 Route::post('/register',[AuthController::class, 'register']);
